--- a/META.yml
+++ b/META.yml
@@ -7,6 +7,7 @@ build_requires:
   ExtUtils::MakeMaker: 6.36
   File::Object: 0.05
   Test::More: 0
+  Test::NoWarnings: 0
   Test::Pod: 0
   Test::Pod::Coverage: 0
 configure_requires:
@@ -29,4 +30,4 @@ resources:
   homepage: https://github.com/tupinek/Text-DSV
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/tupinek/Text-DSV
-version: 0.05
+version: 0.06
