--- a/META.yml
+++ b/META.yml
@@ -25,9 +25,11 @@ no_index:
     - examples
     - inc
     - t
+requires:
+  perl: 5.6.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Text-DSV
   homepage: https://github.com/tupinek/Text-DSV
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/tupinek/Text-DSV
-version: 0.08
+version: 0.09
